# svc-contact

./: .cspell.project-words.txt  .env.repo
client-grpc/: Cargo.toml
client-grpc/examples/: grpc.rs
client-grpc/src/: lib.rs
proto/: cargo.proto  common.proto  ready.proto
server/: Cargo.toml  build.rs
server/src/: config.rs
server/src/grpc/: client.rs  macros.rs  server.rs
