[package]
description = "Arrow Contact Service gRPC Client"
name        = "svc-contact-client-grpc"
version     = "0.0.2-develop.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
cargo   = []
default = ["cargo"]

[dependencies]
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"
uuid        = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "grpc"
