[package]
description = "Arrow Contact Service gRPC Server"
name        = "svc-contact"
version     = "0.0.2-develop.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
cargo            = []
default          = ["cargo"]
vendored-openssl = ['openssl/vendored']

[dependencies]
anyhow       = "1.0"
axum         = "0.6"
cargo-husky  = "1"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4.0", features = ["derive"] }
config       = "0.13"
dotenv       = "0.15"
futures      = "0.3"
hyper        = "0.14"
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.28", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.8"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common.git"
tag = "v0.1.1-develop.2"

[dependencies.svc-storage-client-grpc]
git = "https://github.com/Arrow-air/svc-storage.git"
tag = "v0.10.1-develop.11"
features = [
    "user",
    "itinerary",
    "parcel"
]

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "3.1"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"
